# homeroute

./: .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  Makefile  README.md  ecosystem.config.cjs  systemd-container-migration.md
.claude/: settings.json  settings.local.json
.claude/agents/: ui-reviewer.md  ux-reviewer.md
api/: ecosystem.config.cjs  package-lock.json  package.json
api/data/: auth.db  auth.db-shm  auth.db-wal  reverseproxy-config.json  users.yml
api/src/: index.js
api/src/middleware/: auth.js
api/src/routes/: auth.js  authproxy.js  backup.js  energy.js  forward-auth.js  nat.js  reverseproxy.js  rust-proxy.js  servers.js  traffic.js  updates.js  users.js  wol.js
api/src/services/: adblock.js  authUsers.js  authdb.js  backup.js  cloudflare.js  dnsmasq.js  energy.js  firewall.js  mongodb.js  reverseproxy.js  serverMonitoring.js  serverScheduler.js  servers.js  sessions.js  sshKeys.js  traffic.js  trafficAggregation.js  trafficDnsCapture.js  trafficHttpCapture.js  trafficNetworkCapture.js  updates.js  userManagement.js  wol.js
auth-api/: package-lock.json  package.json
auth-api/data/: auth.db-shm  auth.db-wal
auth-api/src/: index.js
auth-api/src/routes/: auth.js  forward-auth.js
auth-api/src/services/: database.js  sessions.js  users.js
auth-web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
auth-web/src/: App.jsx  index.css  main.jsx
auth-web/src/components/: InstallPWA.jsx
auth-web/src/pages/: Login.jsx  Profile.jsx
auth-web/src/services/: api.js
crates/: Cargo.toml
crates/homeroute/: Cargo.toml
crates/homeroute/src/: main.rs  supervisor.rs
crates/hr-acme/: Cargo.toml
crates/hr-acme/src/: acme.rs  cloudflare.rs  lib.rs  storage.rs  types.rs
crates/hr-adblock/: Cargo.toml
crates/hr-adblock/src/: config.rs  filter.rs  lib.rs  sources.rs
crates/hr-agent/: Cargo.toml
crates/hr-agent/src/: config.rs  connection.rs  dataverse.rs  main.rs  mcp.rs  mcp_instructions.txt  metrics.rs  pages.rs  powersave.rs  proxy.rs  services.rs
crates/hr-analytics/: Cargo.toml
crates/hr-analytics/src/: aggregation.rs  capture.rs  lib.rs  query.rs  store.rs
crates/hr-api/: Cargo.toml
crates/hr-api/src/: container_manager.rs  lib.rs  local_host.rs  state.rs
crates/hr-api/src/routes/: adblock.rs  applications.rs  auth.rs  ca.rs  cloud_relay.rs  containers.rs  dataverse.rs  ddns.rs  dns.rs  dns_dhcp.rs  energy.rs  health.rs  hosts.rs  mod.rs  nat.rs  network.rs  reverseproxy.rs  rust_proxy.rs  servers.rs  services.rs  traffic.rs  updates.rs  users.rs  wol.rs  ws.rs
crates/hr-auth/: Cargo.toml
crates/hr-auth/src/: forward_auth.rs  lib.rs  middleware.rs  sessions.rs  users.rs
crates/hr-auth/tests/: integration.rs
crates/hr-ca/: Cargo.toml
crates/hr-ca/src/: ca.rs  lib.rs  storage.rs  types.rs
crates/hr-cloud-relay/: Cargo.toml
crates/hr-cloud-relay/src/: main.rs  relay.rs
crates/hr-common/: Cargo.toml
crates/hr-common/src/: config.rs  error.rs  events.rs  lib.rs  service_registry.rs  state.rs
crates/hr-container/: Cargo.toml
crates/hr-container/src/: client.rs  lib.rs  rootfs.rs
crates/hr-dataverse/: Cargo.toml
crates/hr-dataverse/src/: engine.rs  events.rs  lib.rs  migration.rs  query.rs  schema.rs  validation.rs
crates/hr-dhcp/: Cargo.toml
crates/hr-dhcp/src/: config.rs  lease_store.rs  lib.rs  options.rs  packet.rs  server.rs  state_machine.rs
crates/hr-dns/: Cargo.toml
crates/hr-dns/src/: cache.rs  config.rs  lib.rs  logging.rs  packet.rs  records.rs  resolver.rs  server.rs  upstream.rs
crates/hr-host-agent/: Cargo.toml
crates/hr-host-agent/src/: config.rs  main.rs
crates/hr-ipv6/: Cargo.toml
crates/hr-ipv6/src/: config.rs  dhcpv6.rs  lib.rs  ra.rs
crates/hr-proxy/: Cargo.toml
crates/hr-proxy/src/: config.rs  handler.rs  lib.rs  logging.rs  tls.rs
crates/hr-registry/: Cargo.toml
crates/hr-registry/src/: cloudflare.rs  dataverse_claude_md.txt  lib.rs  protocol.rs  state.rs  types.rs
crates/hr-servers/: Cargo.toml
crates/hr-servers/src/: lib.rs  monitoring.rs  scheduler.rs
crates/hr-system/: Cargo.toml
crates/hr-system/src/: lib.rs
crates/hr-tunnel/: Cargo.toml
crates/hr-tunnel/src/: crypto.rs  lib.rs  protocol.rs  quic.rs
rust-proxy/: Cargo.toml
rust-proxy/src/: main.rs
rust-proxy/src/config/: mod.rs
rust-proxy/src/proxy/: mod.rs
store_flutter/: pubspec.yaml
store_flutter/android/app/: build.gradle.kts
store_flutter/android/app/src/main/: AndroidManifest.xml
store_flutter/lib/screens/: catalog_screen.dart
store_flutter/lib/services/: api_client.dart
web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  index.css
web/src/api/: client.js
web/src/components/: AppGroupCard.jsx  ApplicationCard.jsx  Button.jsx  Card.jsx  ConfirmModal.jsx  ContainerCard.jsx  CreateContainerModal.jsx  FanCurveEditor.jsx  GroupBadge.jsx  GroupModal.jsx  Layout.jsx  MiniCurveGraph.jsx  PageHeader.jsx  Section.jsx  ServiceStatusPanel.jsx  Sidebar.jsx  StatusBadge.jsx  UserModal.jsx
web/src/components/charts/: ApplicationPieChart.jsx  TopDevicesChart.jsx  TopEndpointsChart.jsx  TrafficTimeseriesChart.jsx
web/src/context/: AuthContext.jsx
web/src/hooks/: useWebSocket.js
web/src/pages/: Adblock.jsx  Applications.jsx  Backup.jsx  CertificateAuthority.jsx  Certificates.jsx  CloudRelay.jsx  Containers.jsx  ContainersV2.jsx  Dashboard.jsx  DataBrowser.jsx  Dataverse.jsx  Ddns.jsx  Dns.jsx  Energy.jsx  Hosts.jsx  Login.jsx  Network.jsx  Profile.jsx  ReverseProxy.jsx  Servers.jsx  Traffic.jsx  Updates.jsx  Users.jsx  Wol.jsx
