[workspace]
resolver = "2"
members = [
    "homeroute",
    "hr-common",
    "hr-auth",
    "hr-ca",
    "hr-proxy",
    "hr-dns",
    "hr-dhcp",
    "hr-ipv6",
    "hr-adblock",
    "hr-analytics",
    "hr-servers",
    "hr-system",
    "hr-api",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP framework
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["cookie"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "fs"] }

# TLS
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rustls-pemfile = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Auth
argon2 = "0.5"
cookie = "0.18"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ipnet = "2.9"
rand = "0.9"
bytes = "1.0"
hex = "0.4"
time = "0.3"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Signal handling
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
tokio-stream = "0.1"

# Adblock
rustc-hash = "2.1"

# HTTP body utilities
http-body-util = "0.1"

# Raw sockets
socket2 = { version = "0.5", features = ["all"] }

# Certificate generation
rcgen = "0.13"

# Cron scheduling
tokio-cron-scheduler = "0.13"
