[package]
name = "rust-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP framework and server
axum = "0.8"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# TLS support
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rustls-pemfile = "2.0"

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
anyhow = "1.0"
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# HTTP client for proxying
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }

# Signal handling for hot-reload
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

# Stream utilities (for signal handler)
tokio-stream = "0.1"

# IP address parsing
ipnet = "2.9"

# Timestamps for access logging
chrono = { version = "0.4", features = ["serde"] }

# Path to ca-service (local dependency)
ca-service = { path = "../ca-service" }
