[package]
name = "homeroute"
version.workspace = true
edition.workspace = true

[[bin]]
name = "homeroute"
path = "src/main.rs"

[dependencies]
hr-common = { path = "../hr-common" }
hr-auth = { path = "../hr-auth" }
hr-acme = { path = "../hr-acme" }
hr-proxy = { path = "../hr-proxy" }
hr-dns = { path = "../hr-dns" }
hr-dhcp = { path = "../hr-dhcp" }
hr-ipv6 = { path = "../hr-ipv6" }
hr-adblock = { path = "../hr-adblock" }
hr-api = { path = "../hr-api" }
hr-firewall = { path = "../hr-firewall" }
hr-registry = { path = "../hr-registry" }
hr-lxd = { path = "../hr-lxd" }

uuid = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
signal-hook = { workspace = true }
signal-hook-tokio = { workspace = true }
tokio-stream = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
