[package]
name = "hr-acme"
version.workspace = true
edition.workspace = true

[dependencies]
instant-acme = "0.7"
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rcgen = { workspace = true }
base64 = "0.22"
