[package]
name = "hr-adblock"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
rustc-hash = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
