[package]
name = "hr-agent"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hr-agent"
path = "src/main.rs"

[dependencies]
hr-registry = { path = "../hr-registry" }
hr-dataverse = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
ring = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
