[package]
name = "hr-api"
version.workspace = true
edition.workspace = true

[dependencies]
hr-common = { path = "../hr-common" }
hr-auth = { path = "../hr-auth" }
hr-acme = { path = "../hr-acme" }
hr-proxy = { path = "../hr-proxy" }
hr-dns = { path = "../hr-dns" }
hr-dhcp = { path = "../hr-dhcp" }
hr-ipv6 = { path = "../hr-ipv6" }
hr-adblock = { path = "../hr-adblock" }

hr-registry = { path = "../hr-registry" }
hr-tunnel = { path = "../hr-tunnel" }
hr-lxd = { path = "../hr-lxd" }
tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
tokio-stream = { workspace = true }
ipnet = { workspace = true }
ring = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
