[package]
name = "hr-auth"
version.workspace = true
edition.workspace = true

[dependencies]
hr-common = { path = "../hr-common" }

rusqlite = { workspace = true }
argon2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
rand_core = { version = "0.6", features = ["getrandom"] }

[dev-dependencies]
tempfile = "3"
