[package]
name = "hr-ca"
version.workspace = true
edition.workspace = true

[dependencies]
rcgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
time = { workspace = true }
