[package]
name = "hr-cloud-relay"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hr-cloud-relay"
path = "src/main.rs"

[dependencies]
hr-tunnel = { path = "../hr-tunnel" }
tokio = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
