[package]
name = "hr-dns"
version.workspace = true
edition.workspace = true

[dependencies]
hr-common = { path = "../hr-common" }
hr-adblock = { path = "../hr-adblock" }
hr-dhcp = { path = "../hr-dhcp" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rustc-hash = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
