[package]
name = "hr-host-agent"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hr-host-agent"
path = "src/main.rs"

[dependencies]
hr-registry = { path = "../hr-registry" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
