[package]
name = "hr-proxy"
version.workspace = true
edition.workspace = true

[dependencies]
hr-auth = { path = "../hr-auth" }
hr-registry = { path = "../hr-registry" }
tokio = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
ipnet = { workspace = true }
chrono = { workspace = true }
