[package]
name = "hr-proxy"
version.workspace = true
edition.workspace = true

[dependencies]
hr-common = { path = "../hr-common" }
hr-auth = { path = "../hr-auth" }
hr-registry = { path = "../hr-registry" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
ipnet = { workspace = true }
chrono = { workspace = true }
