[package]
name = "hr-servers"
version.workspace = true
edition.workspace = true

[dependencies]
hr-common = { path = "../hr-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tokio-cron-scheduler = { workspace = true }
uuid = { workspace = true }
