[package]
name = "hr-system"
version.workspace = true
edition.workspace = true

[dependencies]
hr-common = { path = "../hr-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
